# governance

./: .gitignore  AGENTS.md  README.md  am_patch.repo.toml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  tsconfig.json
.github/workflows/: governance_jsonl_sync.yml  publish-governance-toolkit-only.yml  publish_governance_toolkit.yml  publish_repo_snapshot.yml  sync_governance_jsonl.yml
artifacts/governance_toolkit/: manifest.json
docs/change_fragments/: bootstrap_first_governance.txt  issue_403_bootstrap_first_toolkit.txt  issue_409_pytest_gate_contract.txt
governance/: governance.jsonl  governance_local.jsonl  specification.jsonl
src/governance/: gov_navigator.py  pm_spec_validator.py  pm_validator.py  pm_validator_pack_contract.py  pm_validator_runtime_support.py  rc_resolver.py  render_master_spec_txt.py  spec_navigator.py  type_aliases.py  validate_master_spec_v2.py  workflow_effective_context.py
tests/: test_governance_rc_resolver_cli.py  test_pm_validator.py  test_pm_validator_degraded_modes.py  test_workflow_effective_context_authority.py
